// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Dropdown Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="dropdown"
  >
    <div
      className="dropdown-icon icon color-base size-md background-highlight"
      style={
        Object {
          "height": 35,
          "width": 35,
        }
      }
    >
      <svg
        height={35}
        viewBox="0 0 15 9"
        width={35}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <select
      className="dropdown-select"
      onChange={[Function]}
      value=""
    >
      <option
        value={800}
      >
        8:00 AM
      </option>
      <option
        value={1300}
      >
        1:00 PM
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Molecules/Dropdown Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="dropdown is-inline"
  >
    <div
      className="dropdown-icon icon color-base size-md background-highlight"
      style={
        Object {
          "height": 35,
          "width": 35,
        }
      }
    >
      <svg
        height={35}
        viewBox="0 0 15 9"
        width={35}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <select
      className="dropdown-select"
      onChange={[Function]}
      value=""
    >
      <option
        value={800}
      >
        8:00 AM
      </option>
      <option
        value={1300}
      >
        1:00 PM
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Molecules/Dropdown Value 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="dropdown"
  >
    <div
      className="dropdown-icon icon color-base size-md background-highlight"
      style={
        Object {
          "height": 35,
          "width": 35,
        }
      }
    >
      <svg
        height={35}
        viewBox="0 0 15 9"
        width={35}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M7.82633 8.70623L0.882568 1.54063L1.89405 0.496826L7.82633 6.61863L13.7586 0.496826L14.7701 1.54063L7.82633 8.70623Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <select
      className="dropdown-select"
      onChange={[Function]}
      value={1300}
    >
      <option
        value={800}
      >
        8:00 AM
      </option>
      <option
        value={1300}
      >
        1:00 PM
      </option>
    </select>
  </div>
</div>
`;
